--- a/src/main/resources/com/company/projectmanagement/messages_en.properties
+++ b/src/main/resources/com/company/projectmanagement/messages_en.properties
@@ -1,11 +1,20 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+
+
+com.company.projectmanagement.entity/ProjectStats.actualEfforts=Actual efforts
+com.company.projectmanagement.entity/ProjectStats.id=Id
+com.company.projectmanagement.entity/ProjectStats.plannedEfforts=Planned efforts
+com.company.projectmanagement.entity/ProjectStats.tasksCount=Tasks count
+
 com.company.projectmanagement.entity/Project=Project
 com.company.projectmanagement.entity/Project.description=Description
 com.company.projectmanagement.entity/Project.id=Id
 com.company.projectmanagement.entity/Project.manager=Manager
 com.company.projectmanagement.entity/Project.name=Name
 com.company.projectmanagement.entity/Project.tasks=Tasks
+com.company.projectmanagement.entity/ProjectStats=Project stats
+com.company.projectmanagement.entity/ProjectStats.projectName=Project name
 com.company.projectmanagement.entity/Task=Task
 com.company.projectmanagement.entity/Task.assignee=Assignee
 com.company.projectmanagement.entity/Task.description=Description
@@ -19,12 +28,12 @@ com.company.projectmanagement.entity/TaskPriority=Task priority
 com.company.projectmanagement.entity/TaskPriority.HIGH=High
 com.company.projectmanagement.entity/TaskPriority.LOW=Low
 com.company.projectmanagement.entity/TaskPriority.MEDIUM=Medium
-com.company.projectmanagement.entity/TimeEntry=Time entry
 com.company.projectmanagement.entity/TimeEntry.description=Description
 com.company.projectmanagement.entity/TimeEntry.entryDate=Entry date
-com.company.projectmanagement.entity/TimeEntry.id=Id
-com.company.projectmanagement.entity/TimeEntry.timeSpen=Time spen
+com.company.projectmanagement.entity/TimeEntry.task=Task
+com.company.projectmanagement.entity/TimeEntry.timeSpent=Time spent
 com.company.projectmanagement.entity/TimeEntry.user=User
+
 com.company.projectmanagement.entity/User=User
 com.company.projectmanagement.entity/User.id=ID
 com.company.projectmanagement.entity/User.username=Username
@@ -57,6 +66,15 @@ com.company.projectmanagement.view.user/UserListView.title=Users
 
 com.company.projectmanagement.view.project/projectDetailView.title=Project
 com.company.projectmanagement.view.project/projectListView.title=Projects
+
+com.company.projectmanagement.view.projectstats/projectStatsListView.title=Project statses
+
+com.company.projectmanagement.view.task/taskDetailView.title=Task
+com.company.projectmanagement.view.task/taskListView.title=Tasks
+
+
+com.company.projectmanagement.view.timeentry/timeEntryDetailView.title=Time entry
+com.company.projectmanagement.view.timeentry/timeEntryListView.title=Time entries
 
 com.company.projectmanagement.view.user/UserDetailView.title=User
 com.company.projectmanagement.view.user/confirmPassword=Confirm password
